--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ html {
 
   .grid-2{
     grid-column: 4 / 6;
-    padding-right: 10vh;
+
   }
 
   .grid-3 {
@@ -474,7 +474,7 @@ html {
 }
 
    .fade-arrow  {
-      opacity: 0;
+      opacity: 1;
       }
 
       .fade-arrow:hover .fade {
@@ -534,7 +534,7 @@ html {
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1200px) {
   .on-grid {
     grid-template-columns: 1fr;
   }
@@ -647,6 +647,9 @@ html {
       background: var(--black);
     }
 
+    .grid-2 {
+      padding-right: 10vh;
+    }
 }
 
 @media only screen and (min-width: 2000px) {
@@ -660,6 +663,9 @@ html {
   .container-fluid {
     padding-right: 10vw;
   }
+  .grid-2 {
+    padding-right: 0;
+  }
 }
 
 
@@ -669,6 +675,7 @@ html {
 
 
 .swipeAlert  {
+  text-align: left;
 
 }
 
