--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,14 @@ html {
 
 
 /* Media Queries */
+@media only screen and (max-width: 400px) {
+
+  h1 br {
+    display: none;
+}
+
+}
+
 @media only screen and (max-width: 600px) {
   .container-fluid {
     padding-right: 2em;
