--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ html {
    font-size: 16px;
    font-feature-settings: "","","ss01","ss02","ss03";
    font-weight: normal;
+   letter-spacing: -0.5px;
 
 }
 
@@ -138,6 +139,7 @@ html {
   .medium {
     font-size: 1.5em;
     font-weight: 400;
+    padding-right: 2em;
 
   }
 
@@ -153,7 +155,7 @@ html {
   }
 
   .title h3 {
-    margin:0;
+
   }
 
   .small-icon {
@@ -200,7 +202,7 @@ html {
     top:0;
     background: rgb(253,246,243);
     background: linear-gradient(0deg, var(--white-pink-trans) 0%, var(--white-pink) 40%);
-    padding-top: 3em;
+    padding-top: 2em;
     padding-bottom: 10vh;
     z-index: 999;
 
@@ -244,17 +246,15 @@ html {
     margin: 1em 0;
     padding: 0;
     overflow: hidden;
-    line-height: 1.75em;
+    line-height: 1.5em;
   }
 
   li {
-
     padding-right: 0.5em;
   }
 
   li a {
     display: block;
-    text-align: center;
     text-decoration: none;
   }
 
@@ -283,8 +283,8 @@ html {
   }
 
   .container-fluid {
-    padding-right: 4em;
-    padding-left: 4em;
+    padding-right: 2em;
+    padding-left: 2em;
     margin-left: auto;
     margin-right: auto;
   }
@@ -304,7 +304,7 @@ html {
   .on-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 0;
+    grid-gap: 10px;
   }
 
   .table {
@@ -333,7 +333,7 @@ html {
 
   .title {
     display: block;
-    padding: 1em 0;
+    padding: 1em 0 ;
 
   }
   .skills {
@@ -390,6 +390,16 @@ html {
 
   }
 
+  .project_type {
+    margin-top: -2.9em;
+    align-items: baseline;
+    text-align: right;
+    display: inline-block;
+    margin-left: auto;
+    float: right;
+
+  }
+
   .grid-2{
     grid-column: 4 / 6;
 
@@ -397,6 +407,10 @@ html {
 
   .grid-3 {
     grid-column: 1 / 4;
+  }
+
+  .grid-4 {
+    grid-column: 1 / 5;
   }
 
   .grid-3-center {
@@ -434,6 +448,48 @@ html {
     background-size: 2rem;
 
   }
+
+  body {
+  }
+
+  #projectList{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      position: relative;
+  }
+
+  #projectList h3 {
+    cursor: pointer;
+  }
+
+  #projectList span{
+      cursor: pointer;
+  }
+  #projectList img{
+      display: none;
+      width: 300px;
+      height: 300px;
+      position: absolute;
+      top: calc(50% - 150px);
+      right: calc(20% - 150px)
+  }
+
+  #projectList li {
+    padding: 0;
+    border-bottom: 1px solid var(--black);
+    grid-column: 1 / 4;
+  }
+
+  #projectList li:hover{
+
+  }
+  #projectList li:hover img{
+      display:block;
+  }
+
+
+
+
 /* Footer */
 
   footer {
@@ -504,7 +560,7 @@ html {
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .container-fluid {
     padding-right: 2em;
     padding-left: 2em;
@@ -540,7 +596,15 @@ html {
   .strong {
     font-weight: 400;
   }
+
+    #projectList li:hover img{
+        display:none;
+    }
+
+    #projectList {grid-template-columns: 1fr;}
 }
+
+
 
 @media only screen and (max-width: 1200px) {
   .on-grid {
@@ -655,7 +719,7 @@ html {
       background: var(--black);
     }
     .container-fluid {
-      padding-right: 10vw;
+
     }
 }
 
